(+semver: feature) Added a hero image

--- a/pages/home.html
+++ b/pages/home.html
@@ -4,7 +4,11 @@ permalink: /
 ---
 
 <main id="main-content">
-  <section class="usa-hero" aria-label="Introduction">
+  <section
+    class="usa-hero"
+    style="background-image: url(/assets/img/home-hero.jpg)"
+    aria-label="Introduction"
+  >
     <div class="grid-container">
       <div class="usa-hero__callout">
         <h1 class="usa-hero__heading">
@@ -14,6 +18,20 @@ permalink: /
         <a class="usa-button" href="/nearby">Explore nearby transit</a>
       </div>
     </div>
+  </section>
+  <section class="grid-container trnzt-hero-attribution">
+    Photo by
+    <a
+      class="usa-link usa-link--external"
+      href="https://unsplash.com/@olenka_kotyk?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+      >Olenka Kotyk</a
+    >
+    on
+    <a
+      class="usa-link usa-link--external"
+      href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+      >Unsplash</a
+    >
   </section>
   <section class="grid-container usa-section">
     <div class="grid-row">
