(+semver: feature) Added agencies by country page
- Also stubbed out about and nearby pages

--- a/pages/home.html
+++ b/pages/home.html
@@ -64,6 +64,11 @@ permalink: /
           <div class="usa-media-block__body">
             <h2 class="usa-graphic-list__heading">Find Transit Nearby</h2>
             <p>Using a map, locate routes and stops that are nearby.</p>
+            <p>
+              <a class="usa-button" href="{% link pages/nearby.html %}"
+                >Nearby Transit</a
+              >
+            </p>
           </div>
         </div>
         <div class="usa-media-block tablet:grid-col">
@@ -75,6 +80,11 @@ permalink: /
           <div class="usa-media-block__body">
             <h2 class="usa-graphic-list__heading">Explore Transit Agencies</h2>
             <p>Dig into the directory of transit agencies.</p>
+            <p>
+              <a class="usa-button" href="{% link pages/agencies.html %}"
+                >Agencies</a
+              >
+            </p>
           </div>
         </div>
       </div>
