(+semver: feature) Add an info banner to inform viewers that this isn't at all ready

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,7 +1,19 @@
 ---
 layout: default
 permalink: /
+title: trnzt – a site for digging into data on transit systems around the world
 ---
+
+<div class="usa-alert usa-alert--info">
+  <div class="usa-alert__body">
+    <h4 class="usa-alert__heading">Coming soon</h4>
+    <p class="usa-alert__text">
+      This is still in early development and there's not yet much to see here.
+      If you're interested in contributing, check out the
+      <a href="https://github.com/trnzt/home">GitHub repository</a>.
+    </p>
+  </div>
+</div>
 
 <main id="main-content">
   <section
