(+semver: minor) Update references for Codeberg, etc.

--- a/pages/home.html
+++ b/pages/home.html
@@ -10,7 +10,7 @@ title: trnzt – a site for digging into data on transit systems around the worl
     <p class="usa-alert__text">
       This is still in early development and there's not yet much to see here.
       If you're interested in contributing, check out the
-      <a href="https://github.com/trnzt/home">GitHub repository</a>.
+      <a href="https://codeberg.org/trnzt/home">Git repository</a>.
     </p>
   </div>
 </div>
